--- a/docs/onesource.css
+++ b/docs/onesource.css
@@ -45,4 +45,23 @@
             height: 500px;
             border: none;
         }
+        
+        .team-member {
+            margin-bottom: 15px;
+        }
+        .profile-pic {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
 
+        .info {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .social-links a img {
+            width: 20px;
+            height: 20px;
+            margin-left: 5px;
+        }
