--- a/docs/oct7database.css
+++ b/docs/oct7database.css
@@ -1,6 +1,6 @@
 body {
     background-color: #ede0d4;
-    background-image: url('texture.png'); /* Placeholder for texture */
+    /*background-image: url('texture.png');  Placeholder for texture */
     background-size: cover;
     font-family: Arial, sans-serif;
     color: #333;
