--- a/docs/oct7database.css
+++ b/docs/oct7database.css
@@ -93,10 +93,29 @@ nav a {
     }
 
     nav {
-        display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
+    }
+
+    .menu-toggle {
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    .menu-links {
+        display: none;
+        flex-direction: column;
         gap: 10px;
+        width: 100%;
+    }
+
+    .menu-links.open {
+        display: flex;
+    }
+
+    .menu-links a {
+        font-size: 16px;
+        padding: 6px 0;
     }
 
     nav a {
